src/c_parser.output
Terminals unused in grammar

   tStringLiteral
   tCharacterConstant
   tFloatingConstant
   tSizeof
   tAuto
   tChar
   tConst
   tDo
   tDouble
   tExtern
   tFloat
   tGoTo
   tLong
   tRegister
   tShort
   tSigned
   tStatic
   tTypedef
   tUnion
   tUnsigned
   tVoid
   tVolatile
   tDot
   tExMark
   tDivison
   tHash
   tQuesMark
   tTilde
   tStruct
   tAssOperator
   tDotDotDot
   tMoreMoreEqual
   tLessLessEqual


Rules useless in parser due to conflicts

  102 ARGUMENTS: tLBracket tRBracket


State 22 conflicts: 2 reduce/reduce
State 42 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce
State 44 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 101 conflicts: 6 shift/reduce
State 109 conflicts: 36 reduce/reduce
State 115 conflicts: 1 shift/reduce
State 152 conflicts: 1 shift/reduce
State 162 conflicts: 2 reduce/reduce
State 163 conflicts: 2 reduce/reduce
State 166 conflicts: 6 shift/reduce
State 171 conflicts: 11 shift/reduce
State 176 conflicts: 11 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: PROGRAMS

    2 PROGRAMS: PROGRAM
    3         | PROGRAMS PROGRAM

    4 PROGRAM: FUNCTION
    5        | FUNCTION_DECLARATION
    6        | DECLARATION_STATEMENT
    7        | ARRAY_DECL
    8        | ASSIGNMENT_STATEMENT
    9        | ENUM_STATEMENT

   10 FUNCTION: TYPES tIdentifier PARAMETERS tOScope STATEMENTS tCScope

   11 STATEMENTS: STATEMENT
   12           | STATEMENTS STATEMENT

   13 STATEMENT: ASSIGNMENT_STATEMENT
   14          | LOOP_STATEMENT
   15          | IFELSE_STATEMENT
   16          | FUNCTION_CALL tSemiColon
   17          | END_STATEMENT
   18          | CASE_STATEMENT
   19          | DECLARATION_STATEMENT
   20          | ARRAY_DECL

   21 ENUM_STATEMENT: tEnum tIdentifier tOScope ENUM_VARIABLES tCScope tSemiColon

   22 ENUM_VARIABLES: IDENTIFIER
   23               | ASSIGNMENT_STATEMENT
   24               | ENUM_VARIABLES tComma IDENTIFIER
   25               | ENUM_VARIABLES tComma ASSIGNMENT_STATEMENT

   26 DECLARATION_STATEMENT: TYPES IDENTIFIER tSemiColon

   27 ASSIGNMENT_STATEMENT: TYPES IDENTIFIER OPERATORS CONDITIONAL_EXPRESSION tSemiColon
   28                     | IDENTIFIER OPERATORS CONDITIONAL_EXPRESSION tSemiColon
   29                     | IDENTIFIER OPERATORS CONDITIONAL_EXPRESSION
   30                     | IDENTIFIER UNARY_OPERATORS tSemiColon
   31                     | IDENTIFIER UNARY_OPERATORS

   32 LOOP_STATEMENT: tWhile tLBracket CONDITION tRBracket tOScope STATEMENTS tCScope
   33               | tWhile tLBracket CONDITION tRBracket tOScope tCScope
   34               | tFor tLBracket ASSIGNMENT_STATEMENT CONDITION tSemiColon ASSIGNMENT_STATEMENT tRBracket tOScope STATEMENT tCScope
   35               | tFor tLBracket ASSIGNMENT_STATEMENT CONDITION tSemiColon ASSIGNMENT_STATEMENT tRBracket tOScope tCScope

   36 IFELSE_STATEMENT: tIf tLBracket CONDITION tRBracket tOScope STATEMENTS tCScope
   37                 | tIf tLBracket CONDITION tRBracket tOScope STATEMENTS tCScope tElse tOScope STATEMENTS tCScope
   38                 | tSwitch tLBracket IDENTIFIER tRBracket tOScope STATEMENTS tCScope

   39 CASE_STATEMENT: tCase PRIMARY_EXPRESSION tColon STATEMENTS
   40               | tDefault tColon STATEMENTS

   41 CONDITION: IDENTIFIER CONDITIONERS PRIMARY_EXPRESSION
   42          | IDENTIFIER CONDITIONERS IDENTIFIER
   43          | tIdentifier
   44          | tIntegerConstant
   45          | CONDITIONAL_EXPRESSION

   46 CONDITIONAL_EXPRESSION: BOOLEAN_OR

   47 BOOLEAN_OR: BOOLEAN_OR tPipePipe BOOLEAN_AND
   48           | BOOLEAN_AND

   49 BOOLEAN_AND: BOOLEAN_AND tAndAnd BITWISE_OR
   50            | BOOL_EXPRESSION

   51 BOOL_EXPRESSION: BOOL_EXPRESSION CONDITIONERS BITWISE_OR
   52                | BITWISE_OR

   53 BITWISE_OR: BITWISE_OR tPipe BITWISE_XOR
   54           | BITWISE_XOR

   55 BITWISE_XOR: BITWISE_XOR tXor BITWISE_AND
   56            | BITWISE_AND

   57 BITWISE_AND: BITWISE_AND tAnd BOOL_EXPRESSION
   58            | SHIFT_EXPRESSION

   59 SHIFT_EXPRESSION: SHIFT_EXPRESSION tLessLess PLUS_MINUS_EXPRESSION
   60                 | SHIFT_EXPRESSION tMoreMore PLUS_MINUS_EXPRESSION
   61                 | PLUS_MINUS_EXPRESSION

   62 PLUS_MINUS_EXPRESSION: PLUS_MINUS_EXPRESSION tPlus MULTIPLICATIVE_EXPRESSION
   63                      | PLUS_MINUS_EXPRESSION tMinus MULTIPLICATIVE_EXPRESSION
   64                      | MULTIPLICATIVE_EXPRESSION

   65 MULTIPLICATIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION tMultiply UNIT_EXPRESSION
   66                          | MULTIPLICATIVE_EXPRESSION tDivision UNIT_EXPRESSION
   67                          | MULTIPLICATIVE_EXPRESSION tModulo UNIT_EXPRESSION
   68                          | UNIT_EXPRESSION

   69 UNIT_EXPRESSION: PRIMARY_EXPRESSION
   70                | IDENTIFIER
   71                | FUNCTION_CALL

   72 FUNCTION_CALL: IDENTIFIER tLBracket tRBracket
   73              | IDENTIFIER ARGUMENTS

   74 FUNCTION_DECLARATION: TYPES tIdentifier PARAMETERS tSemiColon

   75 ARRAY_DECL: TYPES tIdentifier tLSBracket tIntegerConstant tRSBracket tSemiColon

   76 ARRAY_CALL: tIdentifier tLSBracket tIntegerConstant tRSBracket

   77 PRIMARY_EXPRESSION: tIntegerConstant

   78 IDENTIFIER: tIdentifier
   79           | ARRAY_CALL

   80 CONDITIONERS: tLess
   81             | tMore
   82             | tMoreEqual
   83             | tLessEqual
   84             | tEqualEqual
   85             | tExMarkEqual

   86 OPERATORS: tEqual
   87          | tPlusEqual
   88          | tMinusEqual
   89          | tModuloEqual
   90          | tDivisionEqual
   91          | tMultiplyEqual
   92          | tXorEqual
   93          | tAndEqual
   94          | tPipeEqual
   95          | tPlusPlus

   96 UNARY_OPERATORS: tPlusPlus
   97                | tMinusMinus

   98 PARAMETERS: tLBracket tRBracket
   99           | tLBracket PARAMETERS_LIST tRBracket

  100 PARAMETERS_LIST: TYPES tIdentifier
  101                | PARAMETERS_LIST tComma TYPES tIdentifier

  102 ARGUMENTS: tLBracket tRBracket
  103          | tLBracket ARGUMENTS_LIST tRBracket

  104 ARGUMENTS_LIST: CONDITIONAL_EXPRESSION
  105               | ARGUMENTS_LIST tComma CONDITIONAL_EXPRESSION

  106 END_STATEMENT: tReturn CONDITIONAL_EXPRESSION tSemiColon
  107              | tReturn FUNCTION_CALL tSemiColon
  108              | tBreak tSemiColon
  109              | tContinue tSemiColon

  110 TYPES: tInt


Terminals, with rules where they appear

$end (0) 0
error (256)
tInt (258) 110
tDivision (259) 66
tPipeEqual (260) 94
tDivisionEqual (261) 90
tStringLiteral (262)
tIdentifier (263) 10 21 43 74 75 76 78 100 101
tIntegerConstant (264) 44 75 76 77
tCharacterConstant (265)
tFloatingConstant (266)
tFor (267) 34 35
tWhile (268) 32 33
tSizeof (269)
tAuto (270)
tBreak (271) 108
tCase (272) 39
tChar (273)
tConst (274)
tContinue (275) 109
tDo (276)
tDouble (277)
tElse (278) 37
tEnum (279) 21
tExtern (280)
tFloat (281)
tGoTo (282)
tIf (283) 36 37
tLong (284)
tRegister (285)
tReturn (286) 106 107
tShort (287)
tSigned (288)
tStatic (289)
tDefault (290) 40
tSwitch (291) 38
tTypedef (292)
tUnion (293)
tUnsigned (294)
tVoid (295)
tVolatile (296)
tPipe (297) 53
tLBracket (298) 32 33 34 35 36 37 38 72 98 99 102 103
tRBracket (299) 32 33 34 35 36 37 38 72 98 99 102 103
tDot (300)
tExMark (301)
tPlus (302) 62
tMinus (303) 63
tPlusPlus (304) 95 96
tMinusMinus (305) 97
tLSBracket (306) 75 76
tRSBracket (307) 75 76
tMore (308) 81
tAnd (309) 57
tDivison (310)
tModulo (311) 67
tXor (312) 55
tMultiply (313) 65
tComma (314) 24 25 101 105
tHash (315)
tQuesMark (316)
tColon (317) 39 40
tTilde (318)
tStruct (319)
tSemiColon (320) 16 21 26 27 28 30 34 35 74 75 106 107 108 109
tCScope (321) 10 21 32 33 34 35 36 37 38
tOScope (322) 10 21 32 33 34 35 36 37 38
tAndAnd (323) 49
tPipePipe (324) 47
tAssOperator (325)
tExMarkEqual (326) 85
tEqualEqual (327) 84
tMoreEqual (328) 82
tLessEqual (329) 83
tMoreMore (330) 60
tLessLess (331) 59
tMinusEqual (332) 88
tPlusEqual (333) 87
tModuloEqual (334) 89
tMultiplyEqual (335) 91
tEqual (336) 86
tXorEqual (337) 92
tAndEqual (338) 93
tDotDotDot (339)
tMoreMoreEqual (340)
tLessLessEqual (341)
tLess (342) 80


Nonterminals, with rules where they appear

$accept (88)
    on left: 0
ROOT (89)
    on left: 1, on right: 0
PROGRAMS (90)
    on left: 2 3, on right: 1 3
PROGRAM (91)
    on left: 4 5 6 7 8 9, on right: 2 3
FUNCTION (92)
    on left: 10, on right: 4
STATEMENTS (93)
    on left: 11 12, on right: 10 12 32 36 37 38 39 40
STATEMENT (94)
    on left: 13 14 15 16 17 18 19 20, on right: 11 12 34
ENUM_STATEMENT (95)
    on left: 21, on right: 9
ENUM_VARIABLES (96)
    on left: 22 23 24 25, on right: 21 24 25
DECLARATION_STATEMENT (97)
    on left: 26, on right: 6 19
ASSIGNMENT_STATEMENT (98)
    on left: 27 28 29 30 31, on right: 8 13 23 25 34 35
LOOP_STATEMENT (99)
    on left: 32 33 34 35, on right: 14
IFELSE_STATEMENT (100)
    on left: 36 37 38, on right: 15
CASE_STATEMENT (101)
    on left: 39 40, on right: 18
CONDITION (102)
    on left: 41 42 43 44 45, on right: 32 33 34 35 36 37
CONDITIONAL_EXPRESSION (103)
    on left: 46, on right: 27 28 29 45 104 105 106
BOOLEAN_OR (104)
    on left: 47 48, on right: 46 47
BOOLEAN_AND (105)
    on left: 49 50, on right: 47 48 49
BOOL_EXPRESSION (106)
    on left: 51 52, on right: 50 51 57
BITWISE_OR (107)
    on left: 53 54, on right: 49 51 52 53
BITWISE_XOR (108)
    on left: 55 56, on right: 53 54 55
BITWISE_AND (109)
    on left: 57 58, on right: 55 56 57
SHIFT_EXPRESSION (110)
    on left: 59 60 61, on right: 58 59 60
PLUS_MINUS_EXPRESSION (111)
    on left: 62 63 64, on right: 59 60 61 62 63
MULTIPLICATIVE_EXPRESSION (112)
    on left: 65 66 67 68, on right: 62 63 64 65 66 67
UNIT_EXPRESSION (113)
    on left: 69 70 71, on right: 65 66 67 68
FUNCTION_CALL (114)
    on left: 72 73, on right: 16 71 107
FUNCTION_DECLARATION (115)
    on left: 74, on right: 5
ARRAY_DECL (116)
    on left: 75, on right: 7 20
ARRAY_CALL (117)
    on left: 76, on right: 79
PRIMARY_EXPRESSION (118)
    on left: 77, on right: 39 41 69
IDENTIFIER (119)
    on left: 78 79, on right: 22 24 26 27 28 29 30 31 38 41 42 70 72
    73
CONDITIONERS (120)
    on left: 80 81 82 83 84 85, on right: 41 42 51
OPERATORS (121)
    on left: 86 87 88 89 90 91 92 93 94 95, on right: 27 28 29
UNARY_OPERATORS (122)
    on left: 96 97, on right: 30 31
PARAMETERS (123)
    on left: 98 99, on right: 10 74
PARAMETERS_LIST (124)
    on left: 100 101, on right: 99 101
ARGUMENTS (125)
    on left: 102 103, on right: 73
ARGUMENTS_LIST (126)
    on left: 104 105, on right: 103 105
END_STATEMENT (127)
    on left: 106 107 108 109, on right: 17
TYPES (128)
    on left: 110, on right: 10 26 27 74 75 100 101


State 0

    0 $accept: . ROOT $end

    tInt         shift, and go to state 1
    tIdentifier  shift, and go to state 2
    tEnum        shift, and go to state 3

    ROOT                   go to state 4
    PROGRAMS               go to state 5
    PROGRAM                go to state 6
    FUNCTION               go to state 7
    ENUM_STATEMENT         go to state 8
    DECLARATION_STATEMENT  go to state 9
    ASSIGNMENT_STATEMENT   go to state 10
    FUNCTION_DECLARATION   go to state 11
    ARRAY_DECL             go to state 12
    ARRAY_CALL             go to state 13
    IDENTIFIER             go to state 14
    TYPES                  go to state 15


State 1

  110 TYPES: tInt .

    $default  reduce using rule 110 (TYPES)


State 2

   76 ARRAY_CALL: tIdentifier . tLSBracket tIntegerConstant tRSBracket
   78 IDENTIFIER: tIdentifier .

    tLSBracket  shift, and go to state 16

    $default  reduce using rule 78 (IDENTIFIER)


State 3

   21 ENUM_STATEMENT: tEnum . tIdentifier tOScope ENUM_VARIABLES tCScope tSemiColon

    tIdentifier  shift, and go to state 17


State 4

    0 $accept: ROOT . $end

    $end  shift, and go to state 18


State 5

    1 ROOT: PROGRAMS .
    3 PROGRAMS: PROGRAMS . PROGRAM

    tInt         shift, and go to state 1
    tIdentifier  shift, and go to state 2
    tEnum        shift, and go to state 3

    $default  reduce using rule 1 (ROOT)

    PROGRAM                go to state 19
    FUNCTION               go to state 7
    ENUM_STATEMENT         go to state 8
    DECLARATION_STATEMENT  go to state 9
    ASSIGNMENT_STATEMENT   go to state 10
    FUNCTION_DECLARATION   go to state 11
    ARRAY_DECL             go to state 12
    ARRAY_CALL             go to state 13
    IDENTIFIER             go to state 14
    TYPES                  go to state 15


State 6

    2 PROGRAMS: PROGRAM .

    $default  reduce using rule 2 (PROGRAMS)


State 7

    4 PROGRAM: FUNCTION .

    $default  reduce using rule 4 (PROGRAM)


State 8

    9 PROGRAM: ENUM_STATEMENT .

    $default  reduce using rule 9 (PROGRAM)


State 9

    6 PROGRAM: DECLARATION_STATEMENT .

    $default  reduce using rule 6 (PROGRAM)


State 10

    8 PROGRAM: ASSIGNMENT_STATEMENT .

    $default  reduce using rule 8 (PROGRAM)


State 11

    5 PROGRAM: FUNCTION_DECLARATION .

    $default  reduce using rule 5 (PROGRAM)


State 12

    7 PROGRAM: ARRAY_DECL .

    $default  reduce using rule 7 (PROGRAM)


State 13

   79 IDENTIFIER: ARRAY_CALL .

    $default  reduce using rule 79 (IDENTIFIER)


State 14

   28 ASSIGNMENT_STATEMENT: IDENTIFIER . OPERATORS CONDITIONAL_EXPRESSION tSemiColon
   29                     | IDENTIFIER . OPERATORS CONDITIONAL_EXPRESSION
   30                     | IDENTIFIER . UNARY_OPERATORS tSemiColon
   31                     | IDENTIFIER . UNARY_OPERATORS

    tPipeEqual      shift, and go to state 20
    tDivisionEqual  shift, and go to state 21
    tPlusPlus       shift, and go to state 22
    tMinusMinus     shift, and go to state 23
    tMinusEqual     shift, and go to state 24
    tPlusEqual      shift, and go to state 25
    tModuloEqual    shift, and go to state 26
    tMultiplyEqual  shift, and go to state 27
    tEqual          shift, and go to state 28
    tXorEqual       shift, and go to state 29
    tAndEqual       shift, and go to state 30

    OPERATORS        go to state 31
    UNARY_OPERATORS  go to state 32


State 15

   10 FUNCTION: TYPES . tIdentifier PARAMETERS tOScope STATEMENTS tCScope
   26 DECLARATION_STATEMENT: TYPES . IDENTIFIER tSemiColon
   27 ASSIGNMENT_STATEMENT: TYPES . IDENTIFIER OPERATORS CONDITIONAL_EXPRESSION tSemiColon
   74 FUNCTION_DECLARATION: TYPES . tIdentifier PARAMETERS tSemiColon
   75 ARRAY_DECL: TYPES . tIdentifier tLSBracket tIntegerConstant tRSBracket tSemiColon

    tIdentifier  shift, and go to state 33

    ARRAY_CALL  go to state 13
    IDENTIFIER  go to state 34


State 16

   76 ARRAY_CALL: tIdentifier tLSBracket . tIntegerConstant tRSBracket

    tIntegerConstant  shift, and go to state 35


State 17

   21 ENUM_STATEMENT: tEnum tIdentifier . tOScope ENUM_VARIABLES tCScope tSemiColon

    tOScope  shift, and go to state 36


State 18

    0 $accept: ROOT $end .

    $default  accept


State 19

    3 PROGRAMS: PROGRAMS PROGRAM .

    $default  reduce using rule 3 (PROGRAMS)


State 20

   94 OPERATORS: tPipeEqual .

    $default  reduce using rule 94 (OPERATORS)


State 21

   90 OPERATORS: tDivisionEqual .

    $default  reduce using rule 90 (OPERATORS)


State 22

   95 OPERATORS: tPlusPlus .
   96 UNARY_OPERATORS: tPlusPlus .

    tIdentifier       reduce using rule 95 (OPERATORS)
    tIdentifier       [reduce using rule 96 (UNARY_OPERATORS)]
    tIntegerConstant  reduce using rule 95 (OPERATORS)
    tIntegerConstant  [reduce using rule 96 (UNARY_OPERATORS)]
    $default          reduce using rule 96 (UNARY_OPERATORS)


State 23

   97 UNARY_OPERATORS: tMinusMinus .

    $default  reduce using rule 97 (UNARY_OPERATORS)


State 24

   88 OPERATORS: tMinusEqual .

    $default  reduce using rule 88 (OPERATORS)


State 25

   87 OPERATORS: tPlusEqual .

    $default  reduce using rule 87 (OPERATORS)


State 26

   89 OPERATORS: tModuloEqual .

    $default  reduce using rule 89 (OPERATORS)


State 27

   91 OPERATORS: tMultiplyEqual .

    $default  reduce using rule 91 (OPERATORS)


State 28

   86 OPERATORS: tEqual .

    $default  reduce using rule 86 (OPERATORS)


State 29

   92 OPERATORS: tXorEqual .

    $default  reduce using rule 92 (OPERATORS)


State 30

   93 OPERATORS: tAndEqual .

    $default  reduce using rule 93 (OPERATORS)


State 31

   28 ASSIGNMENT_STATEMENT: IDENTIFIER OPERATORS . CONDITIONAL_EXPRESSION tSemiColon
   29                     | IDENTIFIER OPERATORS . CONDITIONAL_EXPRESSION

    tIdentifier       shift, and go to state 2
    tIntegerConstant  shift, and go to state 37
